# lncdtask

./: .gitattributes  CheckEyeTracker.bat  MGS_lookatblue.es  Makefile  README.rst  arrington_prisma.org  change_ip.bat  desktop_run_9cal.bat  desktop_run_dollarreward.bat  desktop_run_dollarreward_eeg.bat  desktop_run_dollarreward_noTR.bat  desktop_run_dollarreward_notR.bat  desktop_run_eog.bat  desktop_run_rest.bat  dollar_reward_events.txt  eyelink_calibrate.py  plot_edf_dr.py  readme.txt  readme_loef.txt  readme_prisma2.txt  setup.cfg  setup.py  test_arrington.py  test_eyelink.py
data/: onsets_02-1625165746.csv  onsets_03-1625166081.csv  sub-000_ses-01_task-DR_run-1  sub-000_ses-01_task-DR_run-2  sub-000_ses-01_task-DR_run-3  timing.md
debug/: socket_timing.org
debug/logs_arrington/: check_timing.R  onsets_01-1625165730.csv  timing.md
dll/: ConnectToViewPoint.bat
docs/: index.md  lncd_rest.webm
images/: instruction_1.xcf
lncdtask/: __init__.py  arrington_socket.py  cal_points.py  dollarreward.py  externalcom.py  eyecal.py  eyetask.py  helloworldtask.py  lncdtask.py  mgs.py  participant.py  pylink_help.py  rest.py  rundialog.py  screen.py  timing.py  trial_shuffle.py  vgs.py
tests/: fake_socket_server.py  test_dollar_reward.py  test_run_dialog.py
timing/: Makefile  best_timing.R  dollar_reward_eeg1.tsv  dollar_reward_eeg2.tsv  dollar_reward_eeg3.tsv  dollar_reward_eeg4.tsv  dollar_reward_noTR_12228.tsv  dollar_reward_noTR_23337.tsv  merge_times.bash  mk_eegtime.R  mk_timing.bash  mr_collect.R  mr_vis.R  timing_to_txt.R  top_order.bash  view.R
(+24 files in other folders)
