[metadata]
name = lncdtask
author = "Will Foran"
email = "foranw@upmc.edu"
description = "Pyschopy conveniences for LNCD tasks"
version = 0.2.20241202.1

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

[options]
package_dir =
    lncdtask = lncdtask
install_requires =
    psychopy >= 2023.1.3
    eyelinkio

[options.entry_points]
console_scripts =
   lncd_dollarreward = lncdtask.dollarreward:main
   lncd_eyecal = lncdtask.eyecal:main
   lncd_mgs = lncdtask.mgs:main
   lncd_rest = lncdtask.rest:main

